removed old style and fixed live server layout issue

--- a/css/desktopViewStyle.css
+++ b/css/desktopViewStyle.css
@@ -107,40 +107,11 @@ header
 {
     width: 90%;
 }
-.news-article a, .contact-form a
+.news-article a
 {
     width: 15%;
     border-radius: 2px;
     padding: 10px 20px;
-}
-.contact
-{
-    gap: 20px;
-    margin-right: 30px;
-}
-.contact-map
-{
-    height: 550px;
-    flex: 1;
-    padding: 15px;
-    margin-left: auto;
-}
-.contact-form
-{
-    justify-content: flex-start;
-    height: 550px;
-    width: 300px;
-    flex: 1;
-    margin-left: auto;
-}
-.contact-form-about
-{
-    height: 200px;
-    margin-bottom: 15px;
-    min-width: 25%;
-    max-width: 99%;
-    min-height: 100px;
-    max-height: 250px;
 }
 footer
 {
