--- a/css/mobileViewStyle.css
+++ b/css/mobileViewStyle.css
@@ -144,42 +144,11 @@ header
 {
     width: 90%;
 }
-.news-article a, .contact-form a
+.news-article a
 {
     width: 25%;
     border-radius: 2px;
     padding: 10px 20px;
-}
-.contact
-{
-    gap: 20px;
-    flex-direction: column;
-    margin-bottom: 20px;
-}
-.contact-map
-{
-    width: 90%;
-    height: 550px;
-    flex: 1;
-    padding: 15px;
-    margin: 0 auto;
-}
-.contact-form
-{
-    height: 550px;
-    width: 80%;
-    flex: 1;
-    margin: 0 auto;
-    gap: 10px;
-}
-.contact-form-about
-{
-    height: 200px;
-    margin-bottom: 15px;
-    min-width: 50%;
-    max-width: 99%;
-    min-height: 100px;
-    max-height: 250px;
 }
 footer
 {
